<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medico.medico_fragment_adicionar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/title_novo_medico"
            android:textColor="@color/purple_200"
            android:textSize="28sp">

        </TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/td_nome_medico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/td_nome_medico">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/td_crm_medico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/td_crm_medico">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/td_phone_medico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/td_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/td_phoneFix_medico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/td_phone_fix">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/bt_add_medico"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="@color/teal_700"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/bt_add_medico"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="18sp" />
               <!-- <Button
                    android:id="@+id/bt_voltar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="@color/purple_500"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/bt_voltar"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="18sp" />-->
            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</FrameLayout>